--- a/projects/resumeproject/core/static/core/css/style.css
+++ b/projects/resumeproject/core/static/core/css/style.css
@@ -7,3 +7,41 @@
 #border-css{
     border-right: 2px solid yellow ;
 }
+
+.font-family {
+    font-family: 'Satisfy';
+}
+
+html, body{
+    height:100%;
+}
+
+.container-fluid{
+    min-height: 100%;
+}
+
+
+/*  Services icon  */
+
+.i-color{
+    color : chartreuse;
+}
+
+/* Services Subtitle Colour */
+
+.ss-color{
+    color: silver;
+}
+
+a.nav-link{
+    color: whitesmoke;
+}
+a.nav-link:hover{
+    color: black;
+    background-color: #e9cd79;
+}
+a.nav-link.active{
+    color: black;
+    background-color: #ffc107;
+    font-weight: bold;
+}
