--- a/projects/resumeproject/core/templates/core/base.html
+++ b/projects/resumeproject/core/templates/core/base.html
@@ -8,20 +8,22 @@
     <link rel="stylesheet" href="{% static 'core/css/all.min.css' %}" />
    
     <link rel="stylesheet" href="{% static 'core/css/bootstrap.css' %}" />
-   
+       
     {% block corecss %}
     <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     {% endblock corecss %}
     
     <title>Home</title>
 
   </head>
-  <body>
-    <div class="container-fluid bg-dark" >
+  <body  >
+    <div class="container-fluid bg-dark"   >
         <div class="row">
             <div class="col-sm-2">
+
                 {% include 'core/sidebar.html' %}
-                
+
             </div>
             <div class="col-sm-10">
             {% block content %}
