--- a/projects/resumeproject/core/templates/core/index.html
+++ b/projects/resumeproject/core/templates/core/index.html
@@ -1,4 +1,6 @@
-{% extends 'core/base.html' %} {% block content %} {% load static %}
+{% extends 'core/base.html' %} 
+{% block content %} 
+{% load static %}
 
 <div class="mt-5">
   <div class="text-center" >
@@ -10,13 +12,13 @@
       height="150px"
     />
   </div>
-  <div class="text-white mt-5">
-    <h1 class="font-weight-bold">Hello</h1>
-    <div>
+  <div class="text-white mt-5  mx-5 text-justify">
+    <h1 class="font-weight-bold font-family">Hello,</h1>
+    <div class="px-4" style="line-height: 2rem; text-align: justify;" >
       <p style="text-indent: 100px">
-        I am <b class="text-warning">Kunal Kumar </b> Having 2year of Full-stack
+        I am <b class="text-warning">Kunal Kumar </b> Having 2 year of Full-stack
         devlopment experience for global businesses,I offer the technical
-        expertise you are swwking for your web devloment Position.
+        expertise you are seeking for your web devloment Position.
       </p>
       <p>
         Since earning my bachelor's degree in internet and web developmwnt from
@@ -28,6 +30,15 @@
       </p>
     </div>
   </div>
+
+  <div class="text-center" >
+    <a href="{% url 'contact' %}" class="btn btn-outline-warning my-3 mr-5" >Hire Me</a>
+    <a href="{% url 'contact' %}" class="btn btn-outline-info my-3" >Contact</a>
+
+  </div>
+ 
+
+
 </div>
 
 {% endblock content %}
