--- a/projects/resumeproject/core/templates/core/sidebar.html
+++ b/projects/resumeproject/core/templates/core/sidebar.html
@@ -1,15 +1,15 @@
 {% load static %}
 
-<div class="border-left border-warning h-100 border-css" >
+<div class="border-right border-warning h-100 border-css" >
     <div class="text-center" >
         <img src="{% static 'core/images/p1.jpg' %}" alt="profile pic" class="imag-fluid rounded-circle mt-5" width="100px" height="100px" >
-        <h3 class="text-center mt-2 text-white" >Kunal Kumar</h3>
+        <h3 class="text-center mt-2 text-white font-family" >Kunal Kumar</h3>
     </div>
     <hr class="border-light" >
     <nav class="nav flex-column text-center" >
-        <a href="" class="nav-link">Home</a>
-        <a href="" class="nav-link">Services</a>
-        <a href="" class="nav-link">Skills</a>
-        <a href="" class="nav-link">Contact</a>
+        <a href="{% url 'home' %}" class="nav-link  {{home}} ">Home</a>
+        <a href="{% url 'services' %}" class="nav-link  {{services}}">Services</a>
+        <a href="{% url 'skills' %}" class="nav-link  {{skills}}">Skills</a>
+        <a href="{% url 'contact' %}" class="nav-link  {{contact}}">Contact</a>
     </nav>
 </div>
