--- a/projects/model/enroll/templates/enroll/index.html
+++ b/projects/model/enroll/templates/enroll/index.html
@@ -6,9 +6,9 @@
     <title>Student Registration</title>
 </head>
 <body>
-    <form action="" method="get">
-        {{form.as_p }}
-    </form>
+    <h1> This is the Home Page !!</h1>
     
+    <a href="{% url  'studentdata' %}"> Student Data </a>
+    <a href="{% url 'teacherdata' %}"> Teacher Data </a>
 </body>
 </html>
