--- a/projects/cpassword/enroll/templates/enroll/changepass.html
+++ b/projects/cpassword/enroll/templates/enroll/changepass.html
@@ -19,7 +19,7 @@
         {% for fm in form %}
         {{fm.label_tag}} {{fm}} {{fm.errors|striptags}} <br><br>
         {% endfor %}
-        <input type="submit" value="Save">
+        <input type="submit" value="submit">
 
     </form>
     <a href="{%  url 'userprofile' %}">Profile</a>
