--- a/projects/cpassword/enroll/templates/enroll/profile.html
+++ b/projects/cpassword/enroll/templates/enroll/profile.html
@@ -8,16 +8,31 @@
 <body>
     <h2>Welcome {{name}} </h2>
 
+    <form action="" method="post" novalidate>
+
+        {%  if form.non_field_errors %}
+            {% for error in form.non_field_errors %}
+                <p>{{error}}</p>
+            {% endfor %}
+        {%  endif %}
+
+        {% csrf_token %}
+        {% for fm in form %}
+        {{fm.label_tag}} {{fm}} {{fm.errors|striptags}} <br><br>
+        {% endfor %}
+        <input type="submit" name="" id="Login", value="Save">
+
+    </form>
+
     {% if messages %}
         {% for message in messages %}
-            <small {% if  message.tags %}  class="{{message.tags}}" {% endif %} >{{message}}</small>
+            <small  {% if message.tags %} class="{{message.tags}}" {% endif %} > {{message}} </small>
         {% endfor %}
     {% endif %}
 
-    <a href="{%  url 'userlogout' %}">Logout</a>
-    <a href="{%  url 'changepass' %}">Change Password</a>
-    <a href="{%  url 'changepass1' %}">Change Password 1</a>
-    
+    <a href="{%  url 'userlogout' %}">Logout</a> <br> <br>
+    <a href="{%  url 'changepass' %}">Change Password</a> <br> <br>
+    <a href="{%  url 'changepass1' %}">Change Password 1</a> <br> <br>
     
 </body>
 </html>
