--- a/projects/ORM/gs3/api/templates/api/home.html
+++ b/projects/ORM/gs3/api/templates/api/home.html
@@ -38,6 +38,23 @@
         </tr>
         {% endfor %}
     </table>
+    <hr>
+    <h3>Avegare Data {{average}}</h3>
+    <h3>Avegare  {{average.marks__avg}}</h3>
+    <hr>
+    <h3>Total Data {{total}}</h3>
+    <h3>Total  {{total.marks__sum}}</h3>
+    <hr>
+    <h3>Min Data {{minimum}}</h3>
+    <h3>Min  {{minimum.marks__min}}</h3>
+    <hr>
+    <h3>Max Data {{maximum}}</h3>
+    <h3>Max  {{maximum.marks__max}}</h3>
+    <hr>
+    <h3>Total Data {{totalcount}}</h3>
+    <h3>Total  {{totalcount.marks__count}}</h3>
+    
+
     
 </body>
 </html>
